[project]
name = "sam_uv"
version = "0.1.0"
description = "SAM with UV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "models",
    "weather",
    "geolocator",
]

[tool.pytest.ini_options]
pythonpath = ["lambda"]

[tool.uv]
default-groups = [
  "dev"
]

[tool.uv.sources]
common = { workspace = true }
weather = { workspace = true }
geolocator = { workspace = true }
models = { path = "layers/models" }

[tool.uv.workspace]
members = [
    "layers/common",
    "lambda/weather",
    "lambda/geolocator",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools[all]>=3.16.0",
    "boto3>=1.38.41",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
